News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/Account_Agreement_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account Association</label>
    <nameField>
        <displayFormat>AAJ{0000000}</displayFormat>
        <label>Junction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>