News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Account_Agreement_RelationshipAccount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>