News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Associated Accounts</relationshipLabel>
    <relationshipName>Account_Agreement_Relationship_Agreement</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>