News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Field created as reporting links do not automatically link objects.</description>
    <formula>Agreement__r.Contact__r.FirstName &amp; &quot; &quot; &amp;  Agreement__r.Contact__r.LastName</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>