News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Field created as reporting links do not automatically link objects.</description>
    <formula>Agreement__r.Effective_Date__c</formula>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>