News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Field created as reporting links do not automatically link objects.</description>
    <formula>Agreement__r.End_Date__c</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>