News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/Junction_Status__c.field-meta.xml
<CustomField>
    <fullName>Junction_Status__c</fullName>
    <description>Denormalized Status from Agreement</description>
    <label>Junction Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>