News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Field created as reporting links do not automatically link objects.</description>
    <formula>Agreement__r.Start_Date__c</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>