News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Field created as reporting links do not automatically link objects.</description>
    <formula>TEXT(Agreement__r.Status__c)</formula>
    <label>Agreement Status</label>
    <type>Text</type>
</CustomField>