News UAT/force-app/main/default/objects/Account_Agreement_Relationship__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Field created as reporting links do not automatically link objects.</description>
    <formula>TEXT( Agreement__r.Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>